--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@
     font-weight: 700;
 }
 .section-description{
-    color: var(--Dark-03, #757575);
+    color: #757575;
     text-align: center;
    font-size: 18px;
     font-weight: 400;
@@ -122,6 +122,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 /* about us section */
 .about{
     padding: 130px;
@@ -151,4 +154,52 @@ main{
 }
 .info-discription{
     font-weight: 900;
+}
+#what-i-do{
+    padding: 30px 150px;
+}
+/* skill section */
+.skills-container{
+    display: flex;
+    justify-content: space-between;
+    gap:24px;
+   
+}
+.skil{
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+    margin: 20px 3px;
+}
+.skill-description{
+   color: #757575;
+}
+/* resumme style */
+.resumee-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resumee-container{
+    display: flex;
+    padding: 30px;
+    justify-content: space-between;
+    gap: 70px;
+}
+.resumee-item{
+    margin: 30px 0;
+}
+.resumee-item-discription ,.resumee-item-info{
+    color: #757575;
+   font-size: 16px;
+    font-weight: 400;
+    padding: 5px;
+}
+.resumee-container hr{
+    margin: 30px 30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
