--- a/styles/style.css
+++ b/styles/style.css
@@ -243,9 +243,9 @@ textarea {
 /* responsive styles  */
 
 /* Mobile devices */
-.hide{
+/* .hide{
     display: none;
-}
+} */
 @media screen and (max-width:576px) {
     .nav-bar-area , .nav-bar-list ul , .marry-details {
         flex-direction: column;
@@ -340,5 +340,25 @@ textarea {
         justify-content: center;
         margin-top: 50px;
     }
-        
+    /* download section end */
+    .fotter-area{
+        flex-direction: column;
+    }    
+    .footer-column{
+        width: 100vh;
+    }    
+    .form-area{
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+    }
+    .form-area input{
+        width: 100vh;
+        padding: 5px;
+    }
+    textarea{
+        width: 100vh;
+        border-radius: 5px;
+        padding: 15px;
+    }
 }
