--- a/styles/style.css
+++ b/styles/style.css
@@ -223,6 +223,7 @@ main section{
     align-items: center;
     flex-direction: column;
     gap: 20px;
+    padding-bottom: 100px;
 }
 .form-area input {
     background-color: #fff;
